--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -42,7 +42,8 @@
             android:id="@+id/wvDetails"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="9"></WebView>
+            android:layout_weight="9"
+            android:padding="@dimen/twenty"></WebView>
 
     </LinearLayout>
 
