--- a/app/src/main/res/layout/gridview_row.xml
+++ b/app/src/main/res/layout/gridview_row.xml
@@ -13,7 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        card_view:cardCornerRadius="2dp">
+        card_view:cardCornerRadius="2dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +32,9 @@
                 android:layout_weight="8"
                 android:padding="2dp"
                 android:src="@mipmap/ic_launcher"
-                android:scaleType="fitCenter" />
+                android:scaleType="fitCenter"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"/>
 
             <TextView
                 android:id="@+id/tvTitle"
