--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_details"
     android:layout_width="match_parent"
@@ -9,39 +10,51 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
-        android:weightSum="10"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/ten"
+        android:weightSum="10">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:weightSum="1"
-            android:orientation="horizontal">
+            android:clickable="true"
+            android:padding="@dimen/ten"
+            android:foreground="?android:attr/selectableItemBackground"
+            card_view:cardCornerRadius="@dimen/two">
 
-            <Button
-                android:id="@+id/btnSearch"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:text="Search"
-                android:background="?attr/selectableItemBackgroundBorderless"/>
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-            <Button
-                android:id="@+id/btnTitle"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:text="Recipe Name"
-                android:background="?attr/selectableItemBackgroundBorderless"/>
+                <Button
+                    android:id="@+id/btnSearch"
+                    android:layout_width="@dimen/zero"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:text="Search" />
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/btnTitle"
+                    android:layout_width="@dimen/zero"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:text="Recipe Name" />
+
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
         <WebView
             android:id="@+id/wvDetails"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/zero"
             android:layout_weight="9"
             android:padding="@dimen/twenty"></WebView>
 
