--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.androidtime.mvp.DetailsActivity">
+    tools:context="com.ekhanei.mvp.DetailsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,9 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
+            android:layout_margin="@dimen/five"
             android:layout_weight="1"
             android:clickable="true"
-            android:layout_margin="@dimen/five"
             android:foreground="?android:attr/selectableItemBackground"
             card_view:cardCornerRadius="@dimen/two">
 
@@ -51,12 +51,20 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <WebView
-            android:id="@+id/wvDetails"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/zero"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/five"
             android:layout_weight="9"
-            android:layout_margin="@dimen/five"></WebView>
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground">
+
+            <WebView
+                android:id="@+id/wvDetails"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></WebView>
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
