--- a/app/src/main/res/layout/row_grid_item.xml
+++ b/app/src/main/res/layout/row_grid_item.xml
@@ -6,14 +6,14 @@
     android:background="@android:color/transparent"
     android:gravity="center"
     android:orientation="horizontal"
-    android:padding="3dp">
+    android:padding="@dimen/three">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        card_view:cardCornerRadius="2dp"
+        card_view:cardCornerRadius="@dimen/two"
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true">
 
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:weightSum="10"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/ten">
 
             <ImageView
                 android:id="@+id/ivThumbnail"
@@ -30,7 +30,7 @@
                 android:layout_height="@dimen/zero"
                 android:layout_gravity="center"
                 android:layout_weight="8"
-                android:padding="2dp"
+                android:padding="@dimen/two"
                 android:src="@mipmap/ic_launcher"
                 android:scaleType="fitCenter"
                 android:background="?attr/selectableItemBackgroundBorderless"
